# sq-unassigned-scanner

./: .gitignore  README.md  main.py  pyproject.toml  sonar-project.properties
3.11.2/: pyvenv.cfg
api/: sonarqube.py
core/: researcher.py
utils/: constants.py  execution.py  objects.py
